--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>br.workshop</groupId>
-    <artifactId>pokemon-openliberty</artifactId>
+    <artifactId>lab2-nql-persistence</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
@@ -21,11 +21,6 @@
             <artifactId>jakarta.jakartaee-api</artifactId>
             <version>10.0.0</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>jakarta.data</groupId>
-            <artifactId>jakarta-data-api</artifactId>
-            <version>1.0.0-M1</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.microprofile</groupId>
@@ -49,25 +44,6 @@
                     <groupId>io.openliberty.tools</groupId>
                     <artifactId>liberty-maven-plugin</artifactId>
                     <version>3.10.1</version>
-                    <configuration>
-                        <runtimeArtifact>
-                            <groupId>io.openliberty.beta</groupId>
-                            <artifactId>openliberty-runtime</artifactId>
-                            <version>23.0.0.12-beta</version>
-                            <type>zip</type>
-                        </runtimeArtifact>
-                        <copyDependencies>
-                            <dependencyGroup>
-                                <location>jdbc</location>
-                                <dependency>
-                                    <groupId>org.postgresql</groupId>
-                                    <artifactId>postgresql</artifactId>
-                                    <version>42.2.9</version>
-                                    <type>jar</type>
-                                </dependency>
-                            </dependencyGroup>
-                        </copyDependencies>
-                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
