finished first version
Signed-off-by: Maximillian Arruda <dearrudam@gmail.com>

--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -5,3 +5,6 @@ jnosql.mongodb.host=localhost:27017
 jnosql.mongodb.user=root
 jnosql.mongodb.password=example
 jnosql.mongodb.authentication.source=admin
+
+
+br.workshop.lab2.product.MakeupAPI/mp-rest/url=https://makeup-api.herokuapp.com
