--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>br.workshop</groupId>
-    <artifactId>lab2-nql-persistence</artifactId>
+    <artifactId>lab2-nosql-persistence</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
@@ -36,16 +36,10 @@
             <version>1.1.1-SNAPSHOT</version>
         </dependency>
 
-        <dependency>
-            <groupId>net.datafaker</groupId>
-            <artifactId>datafaker</artifactId>
-            <version>2.1.0</version>
-        </dependency>
-
     </dependencies>
 
     <build>
-        <finalName>pokemon-openliberty</finalName>
+        <finalName>lab2-nosql-persistence</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
